@@ -8,7 +8,6 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_ds390)
 static int ap(int i);
 static void testit(void){
   int ir[4] = {0,1,2,3};
@@ -31,12 +30,10 @@ static int ap(int i){
   a[t++] = i;
   return 1;
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_ds390)
   testit();
   if (a[0] != 0)
     ASSERT (0);
@@ -47,6 +44,4 @@ testTortureExecute (void)
   if (a[3] != 1)
     ASSERT (0);
   return;
-#endif
 }
-
